--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.HospiManagmenetApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="AppTheme.Theme.HospiManagmenetApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.HospiManagmenetApp" parent="Base.Theme.HospiManagmenetApp" />
 </resources>
+
