--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,17 @@
-<resources>
+<?xml version="1.0" encoding="utf-8"?>
+<resources xmlns:tools="http://schemas.android.com/tools">
+
     <!-- Base application theme -->
-    <style name="Theme.HospiManagementApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Customize your theme here -->
+    <style name="Base.Theme.HospiManagementApp" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your theme colors here -->
         <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
         <item name="android:windowBackground">@color/white</item>
     </style>
+
+    <!-- App theme that extends the base -->
+    <style name="Theme.HospiManagementApp" parent="Base.Theme.HospiManagementApp" />
 </resources>
+
+
+
