--- a/app/src/main/res/layout/activity_book_appointment.xml
+++ b/app/src/main/res/layout/activity_book_appointment.xml
@@ -57,6 +57,36 @@
                 android:inputType="text"
                 android:layout_marginBottom="24dp" />
 
+            <EditText
+                android:id="@+id/editTextDoctorName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Doctor Name"
+                android:inputType="textPersonName"
+                android:layout_margin="16dp"/>
+
+            <Spinner
+                android:id="@+id/spinnerDoctorName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:entries="@array/specialists_array" />
+
+
+            <Spinner
+                android:id="@+id/spinnerSpecialty"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:spinnerMode="dropdown" />
+
+            <Spinner
+                android:id="@+id/spinnerClinicLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:entries="@array/clinic_locations" />
+
+
+
             <Button
                 android:id="@+id/buttonSubmitAppointment"
                 android:layout_width="match_parent"
